--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,9 @@ install:
   - conda install -y constructor
 
 build_script:
+  - set PATH=C:\msys64\usr\bin;%PATH%
+  - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" construct.yaml.in > construct.yaml
   - constructor .
-  - move otconda-%VERSION%-Windows-x86_64.exe otconda%PY_MAJOR_VER%-%VERSION%-Windows-x86_64.exe
   - otconda%PY_MAJOR_VER%-%VERSION%-Windows-x86_64.exe /S /D=C:\otconda
   - set CONDA_ROOT="C:\otconda"
   - set "PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%"
