--- a/construct.yaml.in
+++ b/construct.yaml.in
@@ -1,4 +1,4 @@
-name: otconda
+name: otconda@PY_MAJOR_VER@
 version: 0.0.0
 
 ignore_duplicate_files: True
@@ -13,7 +13,7 @@ channels:
   - https://repo.continuum.io/pkgs/msys2/  [win]
 
 specs:
-  - python  # 2 or 3
+  - python @PY_MAJOR_VER@.*
   - conda
   - console_shortcut  [win]
   - menuinst  [win]
