--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
   - set CONDA_ROOT="C:\Miniconda%MINICONDA_SUFFIX%-x64"
   - set "PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%"
   - conda install -y constructor
+  - conda install -y conda=4.3
 
 build_script:
   - set PATH=C:\msys64\usr\bin;%PATH%
