--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
   - set PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%
   - set PATH=C:\msys64\usr\bin;%PATH%
   - conda install -y constructor
-  - pushd %CONDA_ROOT%\Lib\site-packages && appveyor DownloadFile https://github.com/conda/constructor/pull/214.patch && patch -p1 -i 214.patch && popd
+  - conda install -y conda=4.3
 
 build_script:
   - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" construct.yaml.in > construct.yaml
