--- a/construct.yaml.in
+++ b/construct.yaml.in
@@ -1,5 +1,5 @@
 name: otconda@PY_MAJOR_VER@
-version: 1.11
+version: 1.12rc1
 
 ignore_duplicate_files: true
 install_in_dependency_order: true
@@ -29,6 +29,7 @@ specs:
   - otpmml
   - otpod
   - otrobopt
+  - otsubsetinverse
   - otsvm
   - otwrapy
 
