--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,10 @@ install:
   - set CONDA_ROOT="C:\Miniconda%MINICONDA_SUFFIX%-x64"
   - set PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%
   - set PATH=C:\msys64\usr\bin;%PATH%
+  - conda update -y --all
   - conda install -y constructor
+
+  # https://github.com/conda/constructor/issues/204
   - conda install -y conda=4.3
 
 build_script:
