--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,15 +2,14 @@ environment:
   VERSION: 1.12
   matrix:
     - PY_MAJOR_VER: 2
-      MINICONDA_SUFFIX: ""
     - PY_MAJOR_VER: 3
-      MINICONDA_SUFFIX: 3
 
 install:
-  - set CONDA_ROOT="C:\Miniconda%MINICONDA_SUFFIX%-x64"
+  - curl -fSsLO https://repo.anaconda.com/miniconda/Miniconda%PY_MAJOR_VER%-latest-Windows-x86_64.exe
+  - Miniconda%PY_MAJOR_VER%-latest-Windows-x86_64.exe /InstallationType=JustMe /S /D=C:\miniconda64
+  - set CONDA_ROOT="C:\miniconda64"
   - set PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%
   - set PATH=C:\msys64\usr\bin;%PATH%
-  - conda update -y --all
   - conda install -y constructor
 
   # https://github.com/conda/constructor/issues/204
