--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ install:
   - set PATH=%CONDA_ROOT%;%CONDA_ROOT%\Scripts;%CONDA_ROOT%\Library\bin;%PATH%
   - set PATH=C:\msys64\usr\bin;%PATH%
   - python -c "import sys; print(sys.version, sys.executable)"
-  - conda update -y --all
+  - conda config --add channels conda-forge 
   - conda install -y constructor
 
   # https://github.com/conda/constructor/issues/204
