--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,12 @@ install:
   # https://github.com/ContinuumIO/anaconda-issues/issues/10549
   - conda install -y xz zstd
 
+  # else fails on py3.7 ???
+  - xcopy /s %CONDA_ROOT%\Library\bin\tiff.dll %CONDA_ROOT%\Lib\site-packages\PIL
+  - xcopy /s %CONDA_ROOT%\Library\bin\zlib.dll %CONDA_ROOT%\Lib\site-packages\PIL
+  - xcopy /s %CONDA_ROOT%\Library\bin\liblzma.dll %CONDA_ROOT%\Lib\site-packages\PIL
+  - xcopy /s %CONDA_ROOT%\Library\bin\libzstd.dll %CONDA_ROOT%\Lib\site-packages\PIL
+
 build_script:
   - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" construct.yaml.in > construct.yaml
   - constructor -v .
