--- a/construct.yaml.in
+++ b/construct.yaml.in
@@ -1,5 +1,5 @@
 name: otconda@PY_MAJOR_VER@
-version: 1.12
+version: 1.13rc1
 
 ignore_duplicate_files: true
 install_in_dependency_order: true
@@ -23,11 +23,10 @@ specs:
   - matplotlib
   - otfftw
   - otfmi
-  - otlm
   - otmixmod
   - otmorris
   - otpmml
-  - otpod
+  #- otpod
   - otrobopt
   - otsubsetinverse
   - otsvm
