--- a/construct.yaml.in
+++ b/construct.yaml.in
@@ -1,5 +1,5 @@
 name: otconda@PY_MAJOR_VER@
-version: 1.13rc1
+version: 1.13
 
 ignore_duplicate_files: true
 install_in_dependency_order: true
@@ -26,7 +26,7 @@ specs:
   - otmixmod
   - otmorris
   - otpmml
-  #- otpod
+  - otpod
   - otrobopt
   - otsubsetinverse
   - otsvm
