--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,8 @@ install:
   - conda install -y constructor
 
 build_script:
-  - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" construct.yaml.in > construct.yaml
-  - constructor -v .
+  - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" otconda\construct.yaml.in > otconda\construct.yaml
+  - constructor -v otconda
   - otconda%PY_MAJOR_VER%-%VERSION%-Windows-x86_64.exe /S /D=C:\otconda
   - set CONDA_ROOT="C:\otconda"
   - CALL %CONDA_ROOT%\Scripts\activate.bat
