--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,9 @@ environment:
   VERSION: 1.13
   matrix:
     - PY_MAJOR_VER: 2
+      PY_MINOR_VER: 7
     - PY_MAJOR_VER: 3
+      PY_MINOR_VER: 7
 
 install:
   - curl -fSsLO https://repo.anaconda.com/miniconda/Miniconda%PY_MAJOR_VER%-latest-Windows-x86_64.exe
@@ -12,7 +14,7 @@ install:
   - conda install -y constructor
 
 build_script:
-  - sed "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" otconda\construct.yaml.in > otconda\construct.yaml
+  - sed -e "s/@PY_MAJOR_VER@/%PY_MAJOR_VER%/g" -e "s/@PY_MINOR_VER@/%PY_MINOR_VER%/g" otconda\construct.yaml.in > otconda\construct.yaml
   - constructor -v otconda
   - otconda%PY_MAJOR_VER%-%VERSION%-Windows-x86_64.exe /S /D=C:\otconda
   - set CONDA_ROOT="C:\otconda"
