--- a/otconda/construct.yaml.in
+++ b/otconda/construct.yaml.in
@@ -13,7 +13,7 @@ channels:
   - https://repo.continuum.io/pkgs/msys2/  [win]
 
 specs:
-  - python @PY_MAJOR_VER@.*
+  - python @PY_MAJOR_VER@.@PY_MINOR_VER@.*
   - conda
   - console_shortcut  [win]
   - menuinst  [win]
