--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
       env: PY_MAJOR_VER=3 PY_MINOR_VER=7 OS=MacOSX
 
 script:
-  - ./build_otconda.sh ${PY_MAJOR_VER} ${PY_MINOR_VER}
+  - ./build.sh ${PY_MAJOR_VER} ${PY_MINOR_VER}
 
 deploy:
   provider: releases
