--- a/otconda/construct.yaml.in
+++ b/otconda/construct.yaml.in
@@ -1,5 +1,5 @@
 name: otconda@PY_MAJOR_VER@
-version: 1.15.0.1
+version: 1.16rc1
 
 ignore_duplicate_files: true
 
@@ -19,7 +19,7 @@ specs:
   - seaborn
   - ipython
   - jupyter
-  - openturns >=1.15*
+  - openturns >=1.16*
   - otagrum
   - otfftw
   - otfmi
