--- a/otconda/construct.yaml.in
+++ b/otconda/construct.yaml.in
@@ -1,5 +1,5 @@
-name: otconda@PY_MAJOR_VER@
-version: 1.17
+name: otconda3
+version: 1.18rc1
 
 ignore_duplicate_files: true
 
@@ -10,17 +10,16 @@ channels:
   - https://repo.continuum.io/pkgs/msys2/  [win]
 
 specs:
-  - python @PY_MAJOR_VER@.@PY_MINOR_VER@.*
+  - python 3.@PY_MINOR_VER@.*
   - conda
   - console_shortcut  [win]
   - menuinst  [win]
-  - scipy <1.5.2  [win]
   - scikit-learn
   - pandas
   - seaborn
   - ipython
   - jupyter
-  - openturns >=1.17*
+  - openturns >=1.18*
   - otagrum
   - otfftw
   - otfmi
