--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: otconda3-${{ matrix.version }}-Linux-x86_64.sh
+          files: otconda-${{ matrix.version }}-Linux-x86_64.sh
 
   macos:
     runs-on: macos-latest
@@ -33,7 +33,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: otconda3-${{ matrix.version }}-MacOSX-x86_64.sh
+          files: otconda-${{ matrix.version }}-MacOSX-x86_64.sh
 
   windows:
     runs-on: windows-latest
@@ -56,4 +56,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: otconda3-${{ matrix.version }}-Windows-x86_64.sh
+          files: otconda-${{ matrix.version }}-Windows-x86_64.exe
