--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,10 @@ jobs:
     strategy:
       matrix:
         version: [1.18rc1]
-        pyminor: [9]
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: ./build.sh ${{ matrix.pyminor }}
+        run: ./build.sh
       - name: Upload
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -28,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: ./build.sh ${{ matrix.pyminor }}
+        run: ./build.sh
       - name: Upload
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -40,7 +39,6 @@ jobs:
     strategy:
       matrix:
         version: [1.18rc1]
-        pyminor: [9]
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
@@ -49,9 +47,8 @@ jobs:
       - name: Build
         run: |
           conda install -y constructor
-          sed "s/@PY_MINOR_VER@/${{ matrix.pyminor }}/g" otconda\construct.yaml.in > otconda\construct.yaml
-          file otconda\construct.yaml
           constructor -v otconda
+          get-childitem
       - name: Upload
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
