--- a/otconda/construct.yaml
+++ b/otconda/construct.yaml
@@ -10,7 +10,7 @@ channels:
   - https://repo.continuum.io/pkgs/msys2/  [win]
 
 specs:
-  - python 3.@PY_MINOR_VER@
+  - python 3.9
   - conda
   - console_shortcut  [win]
   - menuinst  [win]
