--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [1.18]
+        version: [1.19rc1]
     steps:
       - uses: actions/checkout@v2
       - name: Build
@@ -22,7 +22,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        version: [1.18]
+        version: [1.19rc1]
     steps:
       - uses: actions/checkout@v2
       - name: Build
@@ -37,7 +37,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        version: [1.18]
+        version: [1.19rc1]
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
