--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ['1.20']
+        version: ['1.21rc1']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build
         run: ./build.sh
       - name: Upload
@@ -22,9 +22,9 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        version: ['1.20']
+        version: ['1.21rc1']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build
         run: ./build.sh
       - name: Upload
@@ -37,14 +37,15 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        version: ['1.20']
+        version: ['1.21rc1']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
           miniforge-version: latest
       - name: Build
         run: |
+          conda install -y "conda<23.1"
           conda install -y constructor
           constructor -v otconda
           get-childitem
