--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Release
 on: push
 
 jobs:
-  linux:
+  linux-x86_64:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,6 +17,21 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: otconda-${{ matrix.version }}-Linux-x86_64.sh
+
+  linux-aarch64:
+    runs-on: ubuntu-24.04-arm
+    strategy:
+      matrix:
+        version: ['1.26']
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build
+        run: ./build.sh
+      - name: Upload
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: otconda-${{ matrix.version }}-Linux-aarch64.sh
 
   macos:
     runs-on: macos-latest
